--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <a class="navbar-brand" href="#home">
                     <img class="img-fluid img-profile img-rounded" src="img/profile.jpg" alt="">
                 </a>
-                <h3>JOHN DOE  </h3>
+                <h3>ADITYA KURNIA RAHMAN </h3>
             </div>
 
             <ul class="list-unstyled components">
@@ -95,9 +95,9 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-12 text-center">
                             <img class=" img-profile img-rounded hidden-md hidden-lg" width="200" src="img/profile.jpg" alt="">
-                            <h2 class=" mt-0">I AM A <span class="text-primary">WEB DESIGNER</span></h2>
+                            <h2 class=" mt-0">I AM A <span class="text-primary">BACKEND DEVELOPER</span></h2>
                             <hr class="divider light my-4">
-                            <p class="text-white-50 mb-4">I am John Doe, a Freelance Web Designer & Front-end Developer specializing in user-centered UI/UX Design & WordPress Development.!</p>
+                            <p class="text-white-50 mb-4">Saya Aditya Kurnia Rahman. Bisa dipanggil Adit</p>
 
                         </div>
                     </div>
