--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <!-- From https://www.digitaldesignjournal.com-->
-    <title>Free Single Page Scrolling HTML5 Portfolio Template</title>
+    <title>Aditya Kurnia Rahman</title>
     
 	<!-- Boostrap CDN -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/css/bootstrap.css" rel="stylesheet" id="bootstrap-css">
@@ -208,11 +208,11 @@
                     <div class="row">
                         <div class="col-lg-6 ml-auto text-center mb-6 mb-lg-0">
                             <i class="fas fa-phone fa-3x mb-6  text-primary"></i>
-                            <div>+1 (123) 456-7890</div>
+                            <div>+62 821 5969 4584</div>
                         </div>
                         <div class="col-lg-6 ml-auto text-center mb-6 mb-lg-0">
                             <i class="fas fa-envelope fa-3x mb-6 text-primary"></i>
-                            <div><a class="d-block" href="mailto:contact@yourwebsite.com">contact@yourwebsite.com</a></div>
+                            <div><a class="d-block" href="aditya.krohman@gmail.com">aditya.krohman@gmail.com</a></div>
                         </div>
                     </div>
                 </div>
