--- a/index.html
+++ b/index.html
@@ -98,9 +98,12 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-12 text-center">
                             <img class=" img-profile img-rounded hidden-md hidden-lg" width="200" src="img/profile.jpg" alt="">
-                            <h2 class=" mt-0">I AM A <span class="text-primary">BACKEND DEVELOPER</span></h2>
+                            <h2 class=" mt-0"><span class="text-primary">About</span></h2>
                             <hr class="divider light my-4">
-                            <p class="text-white-50 mb-4">Saya Aditya Kurnia Rahman. Bisa dipanggil Adit</p>
+                            <p class="text-white-50 mb-4">
+                                Hello! Saya Aditya Kurnia Rahman </br>
+                                <br>Saya mobile developer,khususnya aplikasi android. saya membangun aplikasi android menggunakan java atau kotlin. saya juga membuat backend dengan <b>PHP</b>,<b>NodeJs</b> dan <b>Go</b>.</br>                                
+                            </p>
 
                         </div>
                     </div>
