--- a/index.html
+++ b/index.html
@@ -121,35 +121,35 @@
                             <div class="mt-5">
                                 <i class="fas fa-4x fa-desktop  text-primary mb-4"></i>
                                 <h3 class="h4 mb-2">Web  Development</h3>
-                                <p class="text-muted mb-0"> I will create beautiful website with HTML, CSS & WordPress.</p>
+                                <p class="text-muted mb-0"> Membuat website dengan html dan javascript</p>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6 text-center">
                             <div class="mt-5">
                                 <i class="fas fa-4x fa-cog text-primary mb-4"></i>
                                 <h3 class="h4 mb-2">Backend  Development</h3>
-                                <p class="text-muted mb-0">You will get top graphic design ideas & concepts.</p>
+                                <p class="text-muted mb-0">Membuat backend menggunakan <b>NodeJs,PHP,dan Go</b> dengan arsitektur MVC</p>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6 text-center">
                             <div class="mt-5">
                                 <i class="fas fa-4x fa-database text-primary mb-4"></i>
                                 <h3 class="h4 mb-2">Database  Management</h3>
-                                <p class="text-muted mb-0">You will get top graphic design ideas & concepts.</p>
+                                <p class="text-muted mb-0">Mendesain atau merancang schema database <b>MySQL</b> maupun <b>NoSQ</b>L dan menormalisasi database MySQL. </p>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6 text-center">
                             <div class="mt-5">
                                 <i class="fas fa-4x fa-mobile text-primary mb-4"></i>
                                 <h3 class="h4 mb-2">Android App Development</h3>
-                                <p class="text-muted mb-0">Build your ecommerce website with Shopify or Woocommerce</p>
+                                <p class="text-muted mb-0">Membangun aplikasi mobile khususnya Android menggunakan <b>Java atau Kotlin</b>. Dalam Pembuatan aplikasi Android menggunakan Pattern <b>MVVM dan MVP</b></p>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6 text-center">
                             <div class="mt-5">
                                 <i class="fas fa-4x fa-signal text-primary mb-4"></i>
                                 <h3 class="h4 mb-2">Networking  </h3>
-                                <p class="text-muted mb-0">We help companies generate more traffic and leads</p>
+                                <p class="text-muted mb-0">Konfigurasi jaringan internet menggunakan <b>Ubuntu server dan Mikrotik</b></p>
                             </div>
                         </div>
                     </div>
@@ -217,7 +217,7 @@
                             <div class="mt-5">
                                 <i class="fas fa-4x fa-desktop  text-primary mb-4"></i>
                                 <h3 class="h4 mb-2">Web Designing  </h3>
-                                <p class="text-muted mb-0"> I will create beautiful website with HTML, CSS & WordPress.</p>
+                                <p class="text-muted mb-0"> Membangun website dengan html dan javascript</p>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6 text-center">
