Kamu Harus menyesal:)

--- a/index.html
+++ b/index.html
@@ -253,18 +253,18 @@
                         <div class="col-lg-12 text-center">
                             <h2 class="text-center mt-0"> Contact  <span class="text-primary"> Me</span></h2>
                             <hr class="divider my-4">
-                            <p class="text-muted mb-5">Think you're ready for a new website?
-                                <br/> Give me a call or send me an email and I will get back to you soon!</p>
+                            <p class="text-muted mb-5">Tertarik untuk berkerja sama?
+                                <br/> Bisa hubungi saya melalui E-Mail atau Telepon dan saya akan segera menghubungi anda!</p>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-lg-6 ml-auto text-center mb-6 mb-lg-0">
-                            <i class="fas fa-phone fa-3x mb-6  text-primary"></i>
-                            <div>+62 821 5969 4584</div>
+                            <a href="https://api.whatsapp.com/send?phone=6281259694584"><i class="fas fa-phone fa-3x mb-6  text-primary"></i></a>
+                            <div>+62 812 5969 4584</div>
                         </div>
                         <div class="col-lg-6 ml-auto text-center mb-6 mb-lg-0">
                             <i class="fas fa-envelope fa-3x mb-6 text-primary"></i>
-                            <div><a class="d-block" href="aditya.krohman@gmail.com">aditya.krohman@gmail.com</a></div>
+                            <div><a class="d-block" href="mailto:aditya.krohman@gmail.com">aditya.krohman@gmail.com</a></div>
                         </div>
                     </div>
                 </div>
