--- a/index.html
+++ b/index.html
@@ -117,35 +117,35 @@
                     <h2 class="text-center mt-0">My <span class="text-primary"> Skills</span></h2>
                     <hr class="divider my-4">
                     <div class="row">
-                        <div class="col-lg-3 col-md-6 text-center">
+                        <div class="col-lg-3 col-md-6">
                             <div class="mt-5">
                                 <i class="fas fa-4x fa-desktop  text-primary mb-4"></i>
                                 <h3 class="h4 mb-2">Web  Development</h3>
                                 <p class="text-muted mb-0"> Membuat website dengan html dan javascript</p>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-6 text-center">
+                        <div class="col-lg-3 col-md-6">
                             <div class="mt-5">
                                 <i class="fas fa-4x fa-cog text-primary mb-4"></i>
                                 <h3 class="h4 mb-2">Backend  Development</h3>
                                 <p class="text-muted mb-0">Membuat backend menggunakan <b>NodeJs,PHP,dan Go</b> dengan arsitektur MVC</p>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-6 text-center">
+                        <div class="col-lg-3 col-md-6 ">
                             <div class="mt-5">
                                 <i class="fas fa-4x fa-database text-primary mb-4"></i>
                                 <h3 class="h4 mb-2">Database  Management</h3>
                                 <p class="text-muted mb-0">Mendesain atau merancang schema database <b>MySQL</b> maupun <b>NoSQ</b>L dan menormalisasi database MySQL. </p>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-6 text-center">
+                        <div class="col-lg-3 col-md-6">
                             <div class="mt-5">
                                 <i class="fas fa-4x fa-mobile text-primary mb-4"></i>
                                 <h3 class="h4 mb-2">Android App Development</h3>
                                 <p class="text-muted mb-0">Membangun aplikasi mobile khususnya Android menggunakan <b>Java atau Kotlin</b>. Dalam Pembuatan aplikasi Android menggunakan Pattern <b>MVVM dan MVP</b></p>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-6 text-center">
+                        <div class="col-lg-3 col-md-6">
                             <div class="mt-5">
                                 <i class="fas fa-4x fa-signal text-primary mb-4"></i>
                                 <h3 class="h4 mb-2">Networking  </h3>
@@ -215,30 +215,30 @@
                     <div class="row">
                         <div class="col-lg-3 col-md-6 text-center">
                             <div class="mt-5">
-                                <i class="fas fa-4x fa-desktop  text-primary mb-4"></i>
-                                <h3 class="h4 mb-2">Web Designing  </h3>
-                                <p class="text-muted mb-0"> Membangun website dengan html dan javascript</p>
+                                <i class="fas fa-4x fa-graduation-cap  text-primary mb-4"></i>
+                                <h3 class="h4 mb-2">D2-Manajemen Informatika </br> Politeknik Negeri Malang</h3>
+                                <p class="text-muted mb-0"> <b>Graduated 2019</b></p>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6 text-center">
                             <div class="mt-5">
-                                <i class="fas fa-4x fa-palette text-primary mb-4"></i>
-                                <h3 class="h4 mb-2">Graphic Designing</h3>
-                                <p class="text-muted mb-0">You will get top graphic design ideas & concepts.</p>
+                                <i class="fas fa-4x fa-school text-primary mb-4"></i>
+                                <h3 class="h4 mb-2">SMK Negeri 3 Bojonegoro </br> Kimia Analisis</h3>
+                                <p class="text-muted mb-0"><b>Graduated 2017</b></p>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6 text-center">
                             <div class="mt-5">
-                                <i class="fas fa-4x fa-cart-plus text-primary mb-4"></i>
-                                <h3 class="h4 mb-2">E-Commerce Site</h3>
-                                <p class="text-muted mb-0">Build your ecommerce website with Shopify or Woocommerce</p>
+                                <i class="fas fa-4x fa-chalkboard text-primary mb-4"></i>
+                                <h3 class="h4 mb-2">SMP Negeri 6 Bojonegoro </h3>
+                                <p class="text-muted mb-0"><b>Graduated 2013</b></p>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6 text-center">
                             <div class="mt-5">
-                                <i class="fas fa-4x fa-volume-up text-primary mb-4"></i>
-                                <h3 class="h4 mb-2">Digital Marketing  </h3>
-                                <p class="text-muted mb-0">We help companies generate more traffic and leads</p>
+                                <i class="fas fa-4x  fa-book-open text-primary mb-4"></i>
+                                <h3 class="h4 mb-2">MI Al Rosyid Bojonegoro </h3>
+                                <p class="text-muted mb-0"><b>Graduated 2007</b></p>
                             </div>
                         </div>
                     </div>
